--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -22,12 +22,19 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "css-loader": "^2.0.0",
+    "cypress": "^3.1.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.10.0",
     "eslint-cli": "^1.1.1",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "3.2.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "react-test-renderer": "^16.6.3",
     "style-loader": "^0.23.1",
     "webpack": "4.6.0"
   }
