--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "16.3.11",
     "@types/react-dom": "16.0.5",
     "react": "16.3.2",
-    "react-dom": "16.3.2"
+    "react-dom": "16.3.2",
+    "react-redux": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
