--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
