--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development  node ./server",
+    "flow": "flow",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack",
-    "lint": "eslint \"**/*.{js,jsx}\"",
-    "prod": "cross-env NODE_ENV=production  node ./server"
+    "start": "cross-env NODE_ENV=development  node ./server",
+    "prod": "cross-env NODE_ENV=production  node ./server",
+    "lint": "eslint \"**/*.{js,jsx}\""
   },
   "author": "Eduard Trutsyk",
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "cross-env": "^5.1.6",
+    "eslint-plugin-flowtype": "^3.2.1",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.6.1",
@@ -31,6 +33,7 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -40,10 +43,12 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
+    "flow-bin": "^0.91.0",
+    "flow-typed": "^2.5.1",
     "mini-css-extract-plugin": "^0.4.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.9.2",
-    "webpack-cli": "^2.1.4",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-hot-server-middleware": "^0.5.0",
